update overflow problems, fix layout

--- a/kt.css
+++ b/kt.css
@@ -6,9 +6,10 @@ div.lbox {
   border-style: solid;
   border-color: #d0d0d0;
   width: 5em;
-  height: 7em;
+  height: 5em;
   position: relative;
   display: inline-block;
+  overflow: hidden;
 }
 div.index {
   position: absolute;
@@ -32,6 +33,8 @@ div.meaning,div.onyomi,div.kunyomi {
   width: 100%;
   text-align: center;
   font-size: 8pt;
+  overflow: hidden;
+  height: 1em;
 }
 div.onyomi { color: purple; }
 div.kunyomi { color: brown; }
